# timescaledb-backup

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  ci.sh  docker-compose.yml  readme.md
.github/workflows/: build-test.yml  docker-hub.yml
app/: .flake8  entrypoint.sh  main.py  pyproject.toml  requirements.txt
app/tests/: pg_utils.py  test_data.py  test_main.py  test_minio.py  test_postgresql.py  test_progressive_file_save.py  test_run_over_fake_time.py  test_timescaledb.py  utils.py
examples/: .env.example  docker-run.md  example-basic.yaml  example-env-external-network.yaml  example-s3-restore.yaml  example-s3.yaml
