[project]
name = "timescaledb-backup"
version = "0.4.0"
description = "Backup and restore timescaledb or vanilla postgres databases"
authors = [{name = "Audun Ask Blaker", email = "audun@askblaker.com"}]
requires-python = "==3.12.*"
dependencies = [
    "schedule==1.2.2",
    "minio>=7.2.20",
    "psycopg2-binary>=2.9.0",
    "pandas>=3.0.3",
    "isoweek>=1.3.3",
]

[dependency-groups]
dev = [
    "black==26.5.1",
    "ruff==0.15.18",
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "freezegun==1.5.5",
]

[tool.uv]
package = false

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
